--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -6,13 +6,41 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
+    <!-- Primary colors -->
     <Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="PrimaryDark">#ac99ea</Color>
-    <Color x:Key="PrimaryDarkText">#242424</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="SecondaryDarkText">#9880e5</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
+    
+    <!-- Primary Dark colors -->
+    <Color x:Key="PrimaryDark">#3E22A3</Color>
+    <Color x:Key="SecondaryDark">#C7C1E8</Color>
+    <Color x:Key="TertiaryDark">#1F0B6B</Color>
+    <Color x:Key="BackgroundDark">#120A33</Color>
+    <Color x:Key="SurfaceDark">#1A123E</Color>
+    <Color x:Key="OnPrimaryDark">White</Color>
+    <Color x:Key="OnSecondaryDark">#242424</Color>
+    <Color x:Key="OnTertiaryDark">White</Color>
+    <Color x:Key="OnBackgroundDark">#242424</Color>
+    <Color x:Key="OnSurfaceDark">#242424</Color>
+    
+    <!-- Background colors -->
+    <Color x:Key="Background">White</Color>
+    <Color x:Key="Surface">#f5f5f5</Color>
+    
+    <!-- Text colors -->
+    <Color x:Key="OnPrimary">White</Color>
+    <Color x:Key="OnSecondary">#242424</Color>
+    <Color x:Key="OnTertiary">White</Color>
+    <Color x:Key="OnBackground">#242424</Color>
+    <Color x:Key="OnSurface">#242424</Color>
+    
+    <!-- Special colors -->
+    <Color x:Key="Error">#B00020</Color>
+    <Color x:Key="Success">#4CAF50</Color>
+    <Color x:Key="Warning">#FB8C00</Color>
+    <Color x:Key="Info">#2196F3</Color>
 
+    <!-- Standard colors -->
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Magenta">#D600AA</Color>
@@ -28,12 +56,23 @@
     <Color x:Key="Gray900">#212121</Color>
     <Color x:Key="Gray950">#141414</Color>
 
+    <!-- Brushes -->
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
     <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
+    <SolidColorBrush x:Key="BackgroundBrush" Color="{StaticResource Background}"/>
+    <SolidColorBrush x:Key="SurfaceBrush" Color="{StaticResource Surface}"/>
+    <SolidColorBrush x:Key="OnPrimaryBrush" Color="{StaticResource OnPrimary}"/>
+    <SolidColorBrush x:Key="OnSecondaryBrush" Color="{StaticResource OnSecondary}"/>
+    <SolidColorBrush x:Key="OnTertiaryBrush" Color="{StaticResource OnTertiary}"/>
+    <SolidColorBrush x:Key="OnBackgroundBrush" Color="{StaticResource OnBackground}"/>
+    <SolidColorBrush x:Key="OnSurfaceBrush" Color="{StaticResource OnSurface}"/>
+    <SolidColorBrush x:Key="ErrorBrush" Color="{StaticResource Error}"/>
+    <SolidColorBrush x:Key="SuccessBrush" Color="{StaticResource Success}"/>
+    <SolidColorBrush x:Key="WarningBrush" Color="{StaticResource Warning}"/>
+    <SolidColorBrush x:Key="InfoBrush" Color="{StaticResource Info}"/>
     <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}"/>
     <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}"/>
-
     <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}"/>
     <SolidColorBrush x:Key="Gray200Brush" Color="{StaticResource Gray200}"/>
     <SolidColorBrush x:Key="Gray300Brush" Color="{StaticResource Gray300}"/>
