Refactor application structure and enhance features
- Updated App.xaml to include new resource dictionaries for styles and converters.
- Replaced references to old view models and routes in AppShell.xaml and AppShell.xaml.cs.
- Introduced new StartPage and ThemeSettingsPage with corresponding view models for improved navigation and theme management.
- Added IsNullConverter and IsNotNullConverter for better data binding.
- Implemented new domain models for Notification, Theme, and Tome, along with their respective use cases.
- Removed outdated services and models to streamline the codebase.
- Updated project structure to enhance maintainability and readability.

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -8,8 +8,17 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:Views.ArchivePage}"
-        Route="ArchivePage"/>
+        ContentTemplate="{DataTemplate local:Presentation.Views.StartPage}"
+        Route="startPage"/>
 
+    <ShellContent
+        Title="Theme Settings"
+        ContentTemplate="{DataTemplate local:Presentation.Views.ThemeSettingsPage}"
+        Route="themeSettingsPage"/>
+
+    <ShellContent
+        Title="Archive"
+        ContentTemplate="{DataTemplate local:Presentation.Views.ArchivePage}"
+        Route="archive"/>
 
 </Shell>
